[project]
name = "openmeeg"
description = "Forward problems solver in the field of EEG and MEG."
dynamic = ["version"]
maintainers = [{ name="Alexandre Gramfort", email = "alexandre.gramfort@inria.fr" }]
license= { text = "CECILL-B" }
readme = { file = "README.rst", content-type = "text/x-rst" }
requires-python = ">=3.10"
keywords = [
    "neuroscience",
    "neuroimaging",
    "MEG",
    "EEG",
    "ECoG",
    "sEEG",
    "iEEG",
    "brain",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
]

[project.urls]
Homepage = "http://openmeeg.github.io"
Download = "http://github.com/openmeeg/openmeeg"
"Bug Tracker" = "https://github.com/openmeeg/openmeeg/issues"
Documentation = "https://openmeeg.github.io"
"Source code" = "https://github.com/openmeeg/openmeeg"

[build-system]
requires = [
    # Changes here need to be reflected in cibw_before_build_windows.sh
    "setuptools>=68.0.0",
    "setuptools_scm>=6.2",
    "wheel>=0.37.0",
    "numpy>=2.0.0rc1,<3",
]

[tool.setuptools]
zip-safe = false
include-package-data = true  # the default but let's be explicit

[tool.setuptools.packages.find]
where = ["."]
include = ["openmeeg*"]

[tool.setuptools_scm]
root = "../../"
local_scheme = "no-local-version"  # to allow TestPyPI uploads

[tool.cibuildwheel]
# pp310 should in principle work but in practice it doesn't
skip = ["pp*", "*-musllinux*", "pp*-manylinux_aarch64"]
# build = ["cp310-*"]  # if we ever use abi3 mode
archs = "native"
before-all = "bash {project}/build_tools/cibw_before_all.sh {project}"
before-build = "pip install --only-binary=numpy \"numpy>=2,<3\""  # we don't want to build for any platform that NumPy does not provide wheels for
test-requires = [
    "pytest",
    "threadpoolctl",
]
test-command = "bash {project}/build_tools/cibw_test_command.sh {project}"

[tool.cibuildwheel.linux]
repair-wheel-command = [
    "auditwheel show {wheel}",
    "auditwheel repair -w {dest_dir} {wheel}",
    # "pipx run abi3audit --strict --report {wheel}",
]
environment = { RUNNER_OS="Linux", OPENMEEG_LIB="../../install/lib64", OPENMEEG_INCLUDE="../../install/include/OpenMEEG", OPENMEEG_USE_SWIG="1", OPENBLAS_INCLUDE="/usr/local/include" }
environment-pass = ["CHECK_PORCELAIN"]  # for local debugging, set CHECK_PORCELAIN=false

[tool.cibuildwheel.macos]
repair-wheel-command = [
    "bash $GITHUB_WORKSPACE/build_tools/cibw_repair_wheel_command_macos.sh {delocate_archs} {dest_dir} {wheel}",
    # "pipx run abi3audit --strict --report {wheel}",
]
environment = { OPENMEEG_LIB="../../install/lib", OPENMEEG_INCLUDE="../../install/include/OpenMEEG", OPENMEEG_USE_SWIG="1", OPENBLAS_INCLUDE="/usr/local/include", MACOSX_DEPLOYMENT_TARGET="10.15" }

[tool.cibuildwheel.windows]
before-build = "bash {project}/build_tools/cibw_before_build_windows.sh {project}"
repair-wheel-command = [
    "bash %GITHUB_WORKSPACE%/build_tools/cibw_repair_wheel_command_windows.sh {dest_dir} {wheel}",
    # "pipx run abi3audit --strict --report {wheel}",
]
environment = { OPENMEEG_USE_SWIG="0" }

# pytest 8.0: https://github.com/pytest-dev/pytest/issues/11884
[[tool.cibuildwheel.overrides]]
select = "*-win_*"
test-requires = [
    "pytest<8.0.0",
    "threadpoolctl",
]

[tool.ruff]
select = ["E", "F", "W", "D", "I"]
exclude = ["__init__.py", "setup.py"]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D413", # Missing blank line after last section
]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.per-file-ignores]
"*/tests/*.py" = [
    "D103", # Missing docstring in public function
]
